--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,17 @@
-<h1>homepage!</h1>
+    <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo" style="color:green"><i class="material-icons">loop</i>TreadLight</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Profile</a></li>
+        <li><a href="#" class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li>
+        
+      </ul>
+
+      <ul id="nav-mobile" class="sidenav">
+        <li><a href="#">Profile</a></li>
+        <li><a href="#" class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li>
+        
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
