--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,10 +7,47 @@
     <title>Welcome</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+     <script src="js/materialize.js"></script>
+     <script src="js/init.js"></script>
 
 </head>
 <body>
+    {{!-- Navbar  --}}
+      <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo" style="color:green"><i class="material-icons">loop</i>TreadLight</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Profile</a></li>
+        <li><a href="#" class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li>
+        
+      </ul>
+
+      <ul id="nav-mobile" class="sidenav">
+        <li><a href="#">Profile</a></li>
+        <li><a href="#" class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li>
+        
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
     {{{body}}}
+
+    {{!-- Footer --}}
+
+    <footer class="page-footer green">
+    <div class="container">
+      <div class="row">
+          <h5 class="white-text center">TreadLight</h5>
+          <p class="grey-text text-lighten-4 center">Our goal is to help save the planet one trip at a time. Everyone can contribute to reducing their carbon footprint.</p>
+      </div>
+    </div>
+    <div class="footer-copyright center">
+      <div class="container">
+      <p class="brown-text text-lighten-3" >Copyright®2020</p>
+      </div>
+    </div>
+  </footer>
  
 </body>
 </html>
