added css materialize and handlebars loyout and trip

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/treadLight/public/css/materialize.min.css">
+    <link rel="stylesheet" href="/treadLight/public/css/materialize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-     <script src="js/materialize.js"></script>
-     <script src="js/init.js"></script>
+ 
 
 </head>
 <body>
@@ -48,6 +49,10 @@
       </div>
     </div>
   </footer>
+
+     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+     <script src="js/materialize.js"></script>
+     <script src="js/init.js"></script>
  
 </body>
 </html>
