updated handlebars with img

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="/treadLight/public/img/tree.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="/img/tree.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -64,5 +64,5 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="sky forest.jpeg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="/img/sky-forest.jpg" alt="Unsplashed background img 2"></div>
   </div>
