--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/treadLight/public/css/materialize.min.css">
-    <link rel="stylesheet" href="/treadLight/public/css/materialize.css">
+    {{!-- <link rel="stylesheet" href="/treadLight/public/css/materialize.min.css">
+    <link rel="stylesheet" href="/treadLight/public/css/materialize.css"> --}}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
  
 
 </head>
@@ -51,8 +53,8 @@
   </footer>
 
      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-     <script src="js/materialize.js"></script>
-     <script src="js/init.js"></script>
+{{!--      <script src="/js/materialize.js"></script>
+     <script src="/js/init.js"></script> --}}
  
 </body>
 </html>
