updates to HTML routes

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -32,13 +32,13 @@
                     </div><br>
 
                     <div class="form-field">
-                        <label for="username">Username</label>
-                        <input type="text" id="username">
+                        <label for="email">Email</label>
+                        <input type="email" id="email">
                     </div><br>
 
                     <div class="form-field">
                         <label for="password">Password</label>
-                        <input type="text" id="password">
+                        <input type="password" id="password">
                     </div><br>
                     <div class="form-field">
                         <form action="#">
