--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -23,13 +23,13 @@
 
                 <div class="card-content">
                     <div class="form-field">
-                        <label for="username">Username</label>
-                        <input type="text" id="username">
+                        <label for="email">Email</label>
+                        <input type="email" id="email">
                     </div><br>
 
                     <div class="form-field">
                         <label for="password">Password</label>
-                        <input type="text" id="password">
+                        <input type="password" id="password">
                     </div><br>
                     <div class="form-field">
                         <form action="#">
