handlebars links updated

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -10,7 +10,7 @@
 
             </div>
         </div>
-        <div class="parallax"><img src="tree.jpeg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="/treadLight/public/img/tree.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
 
@@ -71,5 +71,5 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="sky forest.jpeg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="" alt="Unsplashed background img 2"></div>
     </div>
