--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -10,7 +10,7 @@
 
             </div>
         </div>
-        <div class="parallax"><img src="tree.jpeg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="/img/tree.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
 
@@ -57,5 +57,5 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="sky forest.jpeg" alt="Unsplashed background img 2"></div>
+        <div class="parallax"><img src="/img/sky-forest.jpg" alt="Unsplashed background img 2"></div>
     </div>
