--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -10,7 +10,7 @@
 
             </div>
         </div>
-        <div class="parallax"><img src="/treadLight/public/img/tree.jpg" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="/img/tree.jpg" alt="Unsplashed background img 1"></div>
     </div>
 
 
