--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,68 +1,96 @@
-<div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <div class="row">
-          <h4 class="header col s12 light" style="color: rgb(12, 56, 12);">Make educated travel decisions to reduce your carbon footprint! </h4>
-        </div>
-        <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light green lighten-1">Log in</a>
-        </div>
-        <br><br>
 
-      </div>
-    </div>
-    <div class="parallax"><img src="/img/tree.jpg" alt="Unsplashed background img 1"></div>
-  </div>
+    <div class="parallax-container">
+      <div class="parallax"><img src="img/tree.jpg"></div>
+    </div>
+    <div class="section white">
+      <div class="row container">
+        <h2 class="header">Parallax</h2>
+        <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+      </div>
+    </div>
+    <div class="parallax-container">
+      <div class="parallax"><img src="img/tree.jpg"></div>
+    </div>
 
 
+
+{{!-- <div id="index-banner" class="parallax-container">
+        <div class="section no-pad-bot">
+              <div class="container">
+                    <br><br>
+                    <div class="row">
+                          <h4 class="header col s12 light" style="color: rgb(12, 56, 12);">Make educated travel
+                    decisions to reduce your carbon footprint! </h4>
+                        </div>
+                    <div class="row center">
+                          <a href="http://materializecss.com/getting-started.html" id="download-button"
+                    class="btn-large waves-effect waves-light green lighten-1">Log in</a>
+                        </div>
+                    <br><br>
+
+                  </div>
+            </div>
+    {{!-- <div class="parallax-container">
+
+            <div class="parallax"><img src="/img/tree.jpg" alt="Unsplashed background img 1"></div>
+    </div>
+       --}}
+</div>
+
+ <div class="parallax-container">
+
+            <div class="parallax"><img src="/img/tree.jpg" alt="Unsplashed background img 1"></div>
+    </div>
+      
   <div class="container">
-    <div class="section">
+        <div class="section">
 
-      <!--   Icon Section   -->
-      <div class="row center"> 
-        <h4 style="color: rgb(12, 56, 12)">This is how it works</h4>
-      </div>
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center green-text"><i class="material-icons">check_circle</i></h2>
-            <h5 class="center">Sign Up</h5>
+              
+        <!--   Icon Section   -->
+              <div class="row center">
+                    <h4 style="color: rgb(12, 56, 12)">This is how it works</h4>
+                  </div>
+              <div class="row">
+                    <div class="col s12 m4">
+                          <div class="icon-block">
+                                <h2 class="center green-text"><i class="material-icons">check_circle</i></h2>
+                                <h5 class="center">Sign Up</h5>
 
-            <p class="light">Sign up to become a part of the solutuion to saving our planet.</p>
-          </div>
-        </div>
+                                <p class="light">Sign up to become a part of the solutuion to saving our planet.</p>
+                              </div>
+                        </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center green-text"><i class="material-icons">time_to_leave</i></h2>
-            <h5 class="center">Describe Your Trip</h5>
+                    <div class="col s12 m4">
+                          <div class="icon-block">
+                                <h2 class="center green-text"><i class="material-icons">time_to_leave</i></h2>
+                                <h5 class="center">Describe Your Trip</h5>
 
-            <p class="light">Use our climate calculator to get your estimated carbon footprint. You can choose a variety of travel options.</p>
-          </div>
-        </div>
+                                <p class="light">Use our climate calculator to get your estimated carbon footprint. You
+                        can choose a variety of travel options.</p>
+                              </div>
+                        </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center green-text"><i class="material-icons">loop</i></h2>
-            <h5 class="center">Save Our Planet</h5>
+                    <div class="col s12 m4">
+                          <div class="icon-block">
+                                <h2 class="center green-text"><i class="material-icons">loop</i></h2>
+                                <h5 class="center">Save Our Planet</h5>
 
-            <p class="light">Donate to help offset your carbon footprint from your travels.</p>
-          </div>
-        </div>
-      </div>
+                                <p class="light">Donate to help offset your carbon footprint from your travels.</p>
+                              </div>
+                        </div>
+                  </div>
 
-    </div>
-  </div>
+            </div>
+      </div>
 
 
   <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
+        <div class="section no-pad-bot">
+              <div class="container">
+                    <div class="row center">
 
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="/img/sky-forest.jpg" alt="Unsplashed background img 2"></div>
-  </div>
+                        </div>
+                  </div>
+            </div>
+        <div class="parallax"><img src="/img/sky-forest.jpg" alt="Unsplashed background img 2"></div>
+      </div> --}}
