--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Welcome</title>
     <link rel="stylesheet" href="/css/style.css">
-    {{!-- <link rel="stylesheet" href="/treadLight/public/css/materialize.min.css">
-    <link rel="stylesheet" href="/treadLight/public/css/materialize.css"> --}}
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,24 +15,19 @@
 
 </head>
 <body>
-    {{!-- Navbar  --}}
-      <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo" style="color:green"><i class="material-icons">loop</i>TreadLight</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#" class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li>
-        
-      </ul>
 
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#" class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li>
-        
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
+ <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">DENIS</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
+    </div>
+  </nav>
+        
+
     {{{body}}}
 
     {{!-- Footer --}}
@@ -53,6 +47,15 @@
   </footer>
 
      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+     <script> 
+       $(document).ready(function(){  
+       
+        $('.parallax').parallax();
+       });
+     </script>
+      
 {{!--      <script src="/js/materialize.js"></script>
      <script src="/js/init.js"></script> --}}
  
