--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -1,12 +1,11 @@
 <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
         <div class="container">
-
-            <br><br>
-
+            <br>
+            <br>
         </div>
     </div>
-            <div class="parallax"><img src="img/tree.jpg" alt="Unsplashed background img 1"></div>
+       <div class="parallax"><img src="img/tree.jpg" alt="Unsplashed background img 1"></div>
 </div>
  <div class="row">
     <div class="col s12 m4">
@@ -106,7 +105,8 @@
                     </div>
 
                     <div class="form-field center">
-                         <a  href="https://standfortrees.org" class=" center btn-large waves-effect waves-light green lighten-1">Donate</a>
+                        <a href="https://standfortrees.org"
+                            class=" center btn-large waves-effect waves-light green lighten-1">Donate</a>
                         {{!-- <button class="btn-large waves-effect waves-dark green" style="width: 100%;"><a href="https://standfortrees.org">Donate</a>Donate</button> --}}
                     </div>
                 </form>              
