--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -55,15 +55,16 @@
         </div>
     </div>
         </div>
+    {{#if tripTime}}
 <div class="row">
      <div class="col s12">
-        <h4>Flight: ___{{co2var}} tons of CO2 | Distance: {{tripDistance}} | Time: {{tripTime}}</h4>
+        <h4>Plane: ___{{co2var}} tons of CO2 | Distance: {{tripDistance}} | Time: {{tripTime}}</h4>
         <h4>Train: ___{{co2var}} tons of CO2 | Distance: {{tripDistance}} | Time: {{tripTime}}</h4>
         <h4>Bus: ___{{co2var}} tons of CO2 | Distance: {{tripDistance}} | Time: {{tripTime}}</h4>
         <h4>Car: ___{{co2var}} tons of CO2 | Distance: {{tripDistance}} | Time: {{tripTime}}</h4>
     </div>
 </div>
-
+{{/if}}
     
 
 
