--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -25,6 +25,7 @@
                         <label for="arrivecity">Arrival City</label>
                         <input type="text" id="arrivecity">
                     </div><br>
+                    <button class="btn-large waves-effect waves-dark green" style="width: 100%;">Submit</button>
                     <br>
                 </form>              
             </div>        
@@ -44,7 +45,7 @@
                         <p>
                             <label>
                                 <input type="checkbox" />
-                                <span style="color: rgb(12, 56, 12);">Flight: ___{{co2var}} tons of CO2 | Distance:
+                                <span style="color: rgb(12, 56, 12);"><i class="fas fa-plane"></i>: ___{{co2var}} t CO2 | Distance:
                                     {{tripDistance}} | Time: {{tripTime}}</span>
                             </label>
                         </p>
@@ -52,7 +53,7 @@
                         <p>
                             <label>
                                 <input type="checkbox" />
-                                <span style="color: rgb(12, 56, 12);">Train: ___{{co2var}} tons of CO2 | Distance:
+                                <span style="color: rgb(12, 56, 12);"><i class="fas fa-train"></i>: ___{{co2var}} t CO2 | Distance:
                                     {{tripDistance}} | Time: {{tripTime}}</span>
                             </label>
                         </p>
@@ -60,7 +61,7 @@
                         <p>
                             <label>
                                 <input type="checkbox" />
-                                <span style="color: rgb(12, 56, 12);">Bus: ___{{co2var}} tons of CO2 | Distance:
+                                <span style="color: rgb(12, 56, 12);"><i class="fas fa-bus-alt"></i>: ___{{co2var}} t CO2 | Distance:
                                     {{tripDistance}} | Time: {{tripTime}}</span>
                             </label>
                         </p>
@@ -68,7 +69,7 @@
                         <p>
                             <label>
                                 <input type="checkbox" />
-                                <span style="color: rgb(12, 56, 12);">Car: ___{{co2var}} tons of CO2 | Distance:
+                                <span style="color: rgb(12, 56, 12);"><i class="fas fa-car"></i>: ___{{co2var}} t CO2 | Distance:
                                     {{tripDistance}} | Time: {{tripTime}}</span>
                             </label>
                         </p>
@@ -126,3 +127,12 @@
                 </div>
             <div class="parallax"><img src="img/sky-forest.jpg" alt="Unsplashed background img 2"></div>
         </div>
+
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6YDdaRNCGktlvWISrGBjv75lcHfR-l44&libraries=places"></script>
+
+  <script>
+      var input = document.getElementById('departcity');
+      var autocomplete = new google.maps.places.Autocomplete(input);
+      var input = document.getElementById('arrivecity');
+      var autocomplete = new google.maps.places.Autocomplete(input);
+</script>
