fixed login form and made button functional

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,7 +9,7 @@
                 your carbon footprint!</h4>
         </div>
         <div class="row center">
-            <a href="/treadLight/views/login.handlebars" id="download-button"
+            <a href="/login" id="download-button"
                 class="btn-large waves-effect waves-light green lighten-1">Log in</a>
         </div>
     </div>
