--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,30 +9,32 @@
                     <div class="center card-action green lighten-1 white-text">
                         <h5>TreadLight Login</h5>
                     </div>
-                    <div class="card-content">
-                        <div class="form-field">
-                            <label for="username">Username</label>
-                            <input type="text" id="username">
-                        </div><br>
-                        <div class="form-field">
-                            <label for="password">Password</label>
-                            <input type="text" id="password">
-                        </div><br>
-                        <div class="form-field">
-                            <form action="#">
+                    <form id="loginForm">
+                        <div class="card-content">
+                            <div class="form-field">
+                                <label for="email">Email</label>
+                                <input type="text" id="email">
+                            </div><br>
+                            <div class="form-field">
+                                <label for="password">Password</label>
+                                <input type="password" id="password">
+                            </div><br>
+                            <div class="form-field">
+
                                 <p><label>
                                         <input type="checkbox" />
                                         <span>Remember me</span>
                                     </label></p>
-                            </form>
-                        </div><br>
-                        <div class="form-field">
-                            <button class="btn-large waves effect waves-dark green" style="width:100%;">Login</button>
-                        </div><br>
-                    </div>
+
+                            </div><br>
+                            <div class="form-field">
+                                <button class="loginbtn btn-large waves effect waves-dark green"
+                                    style="width:100%;">Login</button>
+                            </div><br>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
