added functionality to forms

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -18,6 +18,7 @@
             <div class=" center card-action green lighten-1 white-text">
                 <h5>Join TreadLight Today</h5>
             </div>
+            <form id="registerForm">
             <div class="card-content">
                 <div class="form-field">
                     <label for="firstname">First Name</label>
@@ -38,21 +39,18 @@
                     <input type="password" id="password">
                 </div><br>
                 <div class="form-field">
-                    <form action="#">
                         <p>
                             <label>
                                 <input type="checkbox" />
                                 <span>Remember me</span>
                             </label>
                         </p>
-                    </form>
-
                 </div><br>
-
                 <div class="form-field">
                     <button class="btn-large waves-effect waves-dark green" style="width: 100%;">Sign Me Up!</button>
                 </div><br>
             </div>
+            </form>
         </div>
     </div>
 </div>
