--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -1,4 +1,4 @@
-<div id="index-banner" class="parallax-container">
+{{!-- <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
         <div class="container">
             <br>
@@ -6,7 +6,7 @@
         </div>
     </div>
        <div class="parallax"><img src="img/tree.jpg" alt="Unsplashed background img 1"></div>
-</div>
+</div> --}}
  <div class="row">
     <div class="col s12 m4">
         <div class="card">
@@ -94,13 +94,13 @@
             <div class="card-content">
                 <form id="find-trip-info">
                     <div class="form-field">
-                        <p style="color: rgb(12, 56, 12)">Be part of our community of people who no longer contribute to
-                            climate change. </p>
+                        {{!-- <p style="color: rgb(12, 56, 12)">Be part of our community of people who no longer contribute to
+                            climate change. </p> --}}
                         <br>
                         <br>
-                        <div class="center">
+                        {{!-- <div class="center">
                             <i class="medium material-icons green-text">public</i>
-                        </div>
+                        </div> --}}
                         <br>
                         <br>
                     </div>
