updated db to store travel mode chosen, changed checkboxes to radio selectors and added ids, connected profile page to use user info, connected signup link

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,7 +29,7 @@
                         </div><br>
                         <div class="form-field">
                             <button class="btn-large waves effect waves-dark green" style="width:100%;">Login</button>
-                            <a href="/treadLight/views/register.handlebars">Sign up here</a>
+                            <a href="/register">Sign up here</a>
                         </div><br>
                     </div>
                 </div>
