--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -7,7 +7,7 @@
             <div class="col s12 m8">
                 <div class="card">
                     <div class="center card-action green lighten-1 white-text">
-                        <h5>Welcome to your profile!</h5>
+                        <h5>Hi {{first_name}}!</h5>
                     </div>
                     <div class="card-content">
                         <div class="form-field">
