--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -133,6 +133,44 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6YDdaRNCGktlvWISrGBjv75lcHfR-l44&callback=initMap">
     </script>
   <script>
+      let timeConv = {
+    flightMph: 550,
+    trainMph: 60,
+    busMph: 10,
+    carMph: 40,
+    flightTime: function(data){
+        return data/this.flightMph;
+    },
+    trainTime: function(data){
+        return data / this.trainMph;
+    },
+    busTime: function(data){
+        return data / this.busMph;
+    }, 
+    carTime: function(data){
+        return data / this.carMph;
+    }
+};
+
+let carbonConv = {
+    flightCo2: 188,
+    trainCo2: 147,
+    busCo2: 43,
+    carCo2: 368,
+    flightCarbon: function(data){
+        return data * flightCo2;
+    },
+    trainCarbon: function(data){
+        return data * trainCo2;
+    },    
+    busCarbon: function(data){
+        return data * busCo2;
+    },    
+    carCarbon: function(data){
+        return data * carCo2
+    }
+};
+
       var input = document.getElementById('departcity');
       var autocomplete = new google.maps.places.Autocomplete(input);
       var input = document.getElementById('arrivecity');
@@ -150,14 +188,24 @@
             let googleURL= "https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=" + cityOne + "&destinations=" + cityTwo + "&mode=" + vehicleType + "&language=en-FR&key=" + googleApiKey;
             console.log(googleURL)
             $.ajax({
-                url: googleURL,
+                url: `/retrievetripdata/${cityOne}/${cityTwo}`,
                 method: "GET"
             }).then(function(response) {
-                console.log(response)
+                //console.log(response) 
+                const carTime = timeConv.carTime(response);
+                const busTime = timeConv.busTime(response);
+                const flightTime = timeConv.flightTime(response);
+                const trainTime = timeConv.trainTime(response);
+                console.log(`car:${carTime}`);
+                console.log(`bus:${busTime}`);
+                console.log(`train:${trainTime}`);
+                console.log(`flight:${flightTime}`);
+                
+                //const actualMiles = response.tripDistance;
+                //console.log(actualMiles);
             })
             })
           });
 
-          
       
 </script>
