--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,20 @@
 {{!-- login with image --}}
 <div class="parallax-container">
-    <div class="parallax"><img src="img/tree.jpg"></div>
+    <div class="parallax"><img src="img/trees.jpg"></div>
     <div class="container">
         <br><br>
         <div class="row">
-            <h4 class="header col12 s12 light " style="color: rgb(12, 56, 12); float:left;">Make educated travel
+            <h4 class="header col12 s12 light" id="head1" style="color: rgb(12, 56, 12); float:left;">Make educated travel
                 decisions to reduce
-                your carbon footprint!</h4>
+                your carbon footprint.</h4>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
         </div>
         <div class="row center">
             <a href="/login" id="download-button"
@@ -18,7 +26,7 @@
 {{!-- Icon section white background --}}
 <div class="section white">
     <div class="row container center">
-        <h4 class="header " style="color:rgb(12, 56, 12);">This is how it works</h4>
+        <h4 class="header " style="color:rgb(12, 56, 12);">This is how it works.</h4>
     </div>
     <div class="row">
         <div class="col s12 m4">
