--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Welcome</title>
+  <title><h1>Tread Lightly</h1></title>
   <link rel="stylesheet" href="/css/style.css">
-
+<link href="https://fonts.googleapis.com/css?family=Nunito|Shadows+Into+Light&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,6 @@
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
-
 
 </head>
 
@@ -27,7 +26,7 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a href="/" id="logo-container" class="brand-logo" style="color: green;"><i
-          class="material-icons">loop</i>TreadLight</a>
+          class="material-icons">loop</i><h4>Tread Lightly</h4></a>
       <ul class="right hide-on-med-and-down">
         {{!-- <li><a href="/treadLight/views/profile.handlebars" style="color: rgb(6, 43, 6)">Profile</a></li>
         <li><a href="/treadLight/views/register.handlebars" --}}
@@ -52,14 +51,15 @@
   <footer class="page-footer green">
         <div class="container">
             <div class="row">
-                  <h5 class="white-text center">TreadLight</h5>
-                  <p class="grey-text text-lighten-4 center">Our goal is to help save the planet one trip at a time.
-          Everyone can contribute to reducing their carbon footprint.</p>
+                  <h4 class="white-text center">
+          <i class="material-icons">loop</i>Tread Lightly</h4>
+                  <h5 class="grey-text text-lighten-4 center">Our goal is to help save the planet one trip at a time.
+          Everyone can contribute to reducing their carbon footprint.</h5>
               </div>
           </div>
-        <div class="footer-copyright center">
+        <div class="footer-copyright center light-green darken-4">
             <div class="container">
-              <p class="brown-text text-lighten-3">Copyright®2020</p>
+              <p class="text-white">Copyright © 2020</p>
               </div>
           </div>
       </footer>
