--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -1,12 +1,23 @@
-{{!-- <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-        <div class="container">
-            <br>
-            <br>
-        </div>
+  {{!-- NavBar --}}
+  <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a href="/" id="logo-container" class="brand-logo" style="color: green;"><i
+          class="material-icons">loop</i>TreadLight</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="/profile" class="btn-large waves-effect waves-light green lighten-1">Profile</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="sidenav">
+        {{!-- <li><a href="/treadLight/views/profile.handlebars">Profile</a></li>
+        <li><a href="/treadLight/views/register.handlebars"
+            class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li> --}}
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+ 
     </div>
-       <div class="parallax"><img src="img/tree.jpg" alt="Unsplashed background img 1"></div>
-</div> --}}
+  </nav>
+
+{{!-- TripInfo --}}
  <div class="row">
     <div class="col s12 m4">
         <div class="card">
