finally all workinggg

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
 
 {{!-- login with image --}}
 <div class="parallax-container">
-    <div class="parallax"><img src="img/trees.jpg"></div>
+    <div class="parallax"><img src="/img/trees.jpg"></div>
     <div class="container">
         <br><br>
         <div class="row">
