--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -1,21 +1,21 @@
-  {{!-- NavBar --}}
-  <nav class="white" role="navigation">
+{{!-- NavBar --}}
+<nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a href="/" id="logo-container" class="brand-logo" style="color: green;"><i
-          class="material-icons">loop</i>TreadLight</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/profile" class="btn-large waves-effect waves-light green lighten-1">Profile</a></li>
-      </ul>
+        <a href="/" id="logo-container" class="brand-logo" style="color: green;"><i
+                class="material-icons">loop</i>TreadLight</a>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="/profile" class="btn-large waves-effect waves-light green lighten-1">Profile</a></li>
+        </ul>
 
-      <ul id="nav-mobile" class="sidenav">
-        {{!-- <li><a href="/treadLight/views/profile.handlebars">Profile</a></li>
+        <ul id="nav-mobile" class="sidenav">
+            {{!-- <li><a href="/treadLight/views/profile.handlebars">Profile</a></li>
         <li><a href="/treadLight/views/register.handlebars"
             class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li> --}}
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
- 
+        </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
     </div>
-  </nav>
+</nav>
 
 {{!-- TripInfo --}}
  <div class="row">
@@ -97,6 +97,10 @@
                             </label>
                         </p>
                         <br>
+                        <br>
+                        <div class="form-field">
+                            <button class="btn-large waves-effect waves-dark green" style="width: 100%;">Check your carbon footprint</button>
+                        </div>
 
                     </form>              
             </div>        
@@ -155,7 +159,7 @@
 </div>
 
     
-    <div class="parallax-container valign-wrapper">
+{{!--     <div class="parallax-container valign-wrapper">
             <div class="section no-pad-bot">
                     <div class="container">
                             <div class="row center">
@@ -164,11 +168,7 @@
                         </div>
                 </div>
             <div class="parallax"><img src="img/sky-forest.jpg" alt="Unsplashed background img 2"></div>
-        </div>
-<<<<<<< HEAD
-=======
-
->>>>>>> development
+        </div> --}}
 <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6YDdaRNCGktlvWISrGBjv75lcHfR-l44&libraries=places"></script>
 {{!-- <script async defer
@@ -187,8 +187,4 @@
     var autocomplete = new google.maps.places.Autocomplete(input, options);
 
 
-<<<<<<< HEAD
-=======
-
->>>>>>> development
 </script>
