updated handlebars buttons

--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -5,6 +5,7 @@
                 class="material-icons">loop</i>TreadLight</a>
         <ul class="right hide-on-med-and-down">
             <li><a href="/profile" class="btn-large waves-effect waves-light green lighten-1">Profile</a></li>
+            <li><a href="/" class="btn-large waves-effect waves-light green lighten-1">Log out </a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
