--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,7 +4,7 @@
       <a href="/" id="logo-container" class="brand-logo" style="color: green;"><i
           class="material-icons">loop</i>TreadLight</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="/trip" style="color: rgb(6, 43, 6)">Trip</a></li>
+        <li><a href="/trip" class="btn-large waves-effect waves-light green lighten-1">Trip</a></li>
         <li><a href="/" class="btn-large waves-effect waves-light green lighten-1">Log out</a></li>
       </ul>
 
