--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,9 @@
 h1, h2, h3, h4 {
     font-family: 'Shadows Into Light', cursive;
 }
+.mynav {
+    margin-bottom: 3pt;
+}
 
 h5 {
     font-family: 'Nunito', sans-serif;
