--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a href="/" id="logo-container" class="brand-logo" style="color: green;"><i
-          class="material-icons">loop</i>TreadLight</a>
+          class="material-icons">loop</i><h4>Tread Lightly</h4></a>
       <ul class="right hide-on-med-and-down">
         {{!-- <li><a href="/treadLight/views/profile.handlebars" style="color: rgb(6, 43, 6)">Profile</a></li>
         <li><a href="/treadLight/views/register.handlebars" --}}
@@ -18,6 +18,7 @@
  
     </div>
   </nav>
+
 
 {{!-- login with image --}}
 <div class="parallax-container">
