--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -51,7 +51,7 @@
             </div>
 
             <div class="card-content">
-                <form id="carbon-info">
+                <form>
 
                     <form id="radioForm">
 
@@ -99,7 +99,8 @@
                         <br>
                         <br>
                         <div class="form-field">
-                            <button class="btn-large waves-effect waves-dark green" style="width: 100%;">Check your carbon footprint</button>
+                            <button id="carbon-info" class="btn-large waves-effect waves-dark green" style="width: 100%;">Check your
+                                carbon footprint</button>
                         </div>
 
                     </form>              
@@ -120,9 +121,20 @@
 
                         <p>
                             <label>
-                                <span style="color: rgb(12, 56, 12);">TOTAL: {{my_co2var}} CO2 tons
-                                    <i class="fas fa-road"></i>:
-                                    {{tripDistance}} mi <i class="far fa-clock"></i>: {{my_tripTime}}hrs</span>
+                                <span style="color: rgb(12, 56, 12);">
+                                    TOTAL: <br>
+                                    {{my_co2var}} Tons of CO2
+                                     </span>
+                                     <br>
+                                    <span style="color: rgb(12, 56, 12);">
+                                        <i class="fas fa-road"></i>:
+                                        {{tripDistance}} mi
+                                    </span>
+                                    <br>
+                                    <span style="color: rgb(12, 56, 12);">
+                                        <i class="far fa-clock"></i>: {{my_tripTime}}hrs
+                                    </span>
+                                   
                             </label>
                         </p>
                         <br>
@@ -132,7 +144,7 @@
 
                         <div class="form-field center">
                             <label for="donating">I chose to donate this amount:</label>
-                            <input type="text" id="departcity">
+                            <input type="number" id="chosenDonation">
                             <button class="center btn-large waves-effect waves-light green lighten-1" id="tripSubmit"
                                 style="width: 65%;">Save this to my profile</button>
                         </div>
@@ -144,8 +156,6 @@
 
 
                     <div class="form-field center">
-                        {{!-- <a href="https://standfortrees.org" --}}
-                        {{!-- class="donate-btn center btn-large waves-effect waves-light green lighten-1">Donate</a> --}}
                         <button class="donate-btn btn-large center waves-effect waves-dark green"
                             style="width: 100%;">Donate</button>
                     </div>
