--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -13,10 +13,10 @@
             class="btn-large waves-effect waves-light green lighten-1">Sign up</a></li> --}}
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-
+</nav>
     </div>
-       <div class="parallax"><img src="img/tree.jpg" alt="Unsplashed background img 1"></div>
-</div> --}}
+    {{!--    <div class="parallax"><img src="img/tree.jpg" alt="Unsplashed background img 1"></div> --}}
+</div> 
  <div class="row">
     <div class="col s12 m4">
         <div class="card">
