--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -62,7 +62,7 @@
                     <form id="donate-amount">
                     <div class="form-field">
                         <label for="donating">I'd like to donate this amount:</label>
-                        <input type="text" id="departcity">
+                        <input type="text" id="donationAmount">
                     </div>
                     <button class="btn-large waves-effect waves-dark green" id="tripSubmit"
                         style="width: 100%;">Save this to my profile</button>
@@ -75,7 +75,7 @@
 
                                 <div class="collapsible-header"><i class="material-icons">whatshot</i>One time donation!<div>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</div><div style="color: green">You have donated {{donated}}&nbspDollars</div>
                                 </div>
-                                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                                <div class="collapsible-body"><span></span></div>
 
                                 </li>
                                 <li>
