--- a/views/trip.handlebars
+++ b/views/trip.handlebars
@@ -17,6 +17,7 @@
     </div>
     {{!--    <div class="parallax"><img src="img/tree.jpg" alt="Unsplashed background img 1"></div> --}}
 </div> 
+
  <div class="row">
     <div class="col s12 m4">
         <div class="card">
@@ -140,7 +141,7 @@
                     <form id="donate-amount">
                     <div class="form-field">
                         <label for="donating">I chose to donate this amount:</label>
-                        <input type="text" id="departcity">
+                        <input type="text" id="donationAmount">
                     </div>
                     <button class="btn-large waves-effect waves-dark green" id="tripSubmit"
                         style="width: 100%;">Save this to my profile</button>
